--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -18,86 +18,49 @@
   </script>
 </head>
 <body style="background-color: #2c2b2b;">
-  <div class="about-section">
-    <div id="mySidebar" class="sidebar">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-      <a href="branches.html">Branches</a>
-      <a href="home.html">Home</a>
-      <a href="research.html">Research</a>
-      <a href="aboutus.html">About Us</a>
-      <a href="news.html">News</a>
-    </div>
-    <div id="main">
-      <button class="openbtn" onclick="openNav()" style="position: absolute; top: 10px; left: 10px;">☰</button>
-    </div>
-    <h1>About the Team</h1>
-      <p>We're just some B.Tech Graduates</p>
-      </div>
-      
-      <h2 style="text-align:center; color: aliceblue;">Our Team</h2>
-      <div class="row">
-        <div class="column">
-          <div class="card">
-            <img src="/static/aditya.jpg" alt="Aditya" style="width:100%">
-            <div class="container">
-              <h2>Aditya Saxena</h2>
-              <p class="title">Back-End Devloper</p>
-              <p><a href="mailto:adityaarchie1234@gmail.com" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
-            </div>
-          </div>
-        </div>
-      
-        <div class="column">
-          <div class="card">
-            <img src="/static/nandini.jpg" alt="Nanadini" style="width:100%">
-            <div class="container">
-              <h2>Nanadini Singh</h2>
-              <p class="title">Front End Devloper</p>
-              <p><a href="" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
-            </div>
-          </div>
-        </div>
-      
-        <div class="column">
-          <div class="card">
-            <img src="/static/monke.jpg" alt="Ishank" style="width:100%">
-            <div class="container">
-              <h2>Ishank Giri</h2>
-              <p class="title">Designer</p>
-              <p><a href="" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="card">
-          <img src="/static/piyush.jpg" alt="piyush" style="width:100%">
-          <div class="container">
-            <h2>Piyush Chandra</h2>
-            <p class="title">JS</p>
-            <p><a href="mailto:piyush.chandra2013@gmail.com" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="column">
-        <div class="card">
-          <img src="/static/devansh.jpg" alt="devansh" style="width:100%">
-          <div class="container">
-            <h2>Devansh Chauhan</h2>
-            <p class="title">monke</p>
-            <p><a href="mailto:devanshchauhan19990@gmail.com" style="color: aliceblue; text-decoration: none;"><button class="button"> Contact</button></a>  </p>
-          </div>
-        </div>
-      </div>
-    </div>    
-  </div>
-  <div class="column">
-    <div class="card">
-      </div>
-    </div>
-  </div>
-</div>   
+  
+<body>
+  
+  <footer class="footer">
+  	 <div class="container">
+  	 	<div class="row">
+  	 		<div class="footer-col">
+  	 			<h4>Sitesoch</h4>
+  	 			<ul>
+  	 				<li><a href="#">Home</a></li>
+  	 				<li><a href="#">About</a></li>
+  	 				<li><a href="#">Pricing</a></li>
+  	 				<li><a href="#">Privacy Policy</a></li>
+  	 			</ul>
+  	 		</div>
+  	 		<div class="footer-col">
+  	 			<h4>Get Help</h4>
+  	 			<ul>
+  	 				<li><a href="#">Shipping</a></li>
+  	 				<li><a href="#">Returns</a></li>
+  	 				<li><a href="#">Order Status</a></li>
+  	 				<li><a href="#">Payment Options</a></li>
+  	 			</ul>
+  	 		</div>
+  	 		<div class="footer-col">
+  	 			<h4>Address</h4>
+  	 			<ul>
+  	 				<li><a href="#">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate adipisci quia ab omnis id ipsum quae inventore </a></li>
+  	 			</ul>
+  	 		</div>
+  	 		<div class="footer-col">
+  	 			<h4>follow us</h4>
+  	 			<div class="social-links">
+  	 				<a href="#"><i class="fab fa-google"></i></a>
+  	 				<a href="#"><i class="fab fa-facebook-f"></i></a>
+  	 				<a href="#"><i class="fab fa-instagram"></i></a>
+  	 				<a href="#"><i class="fab fa-twitter"></i></a>
+  	 			</div>
+  	 		</div>
+  	 	</div>
+  	 </div>
+  </footer>
 
+</body>
 </body>
 </html>
