--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,4 +1,9 @@
 
-  body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+  body,h1,h2,h3,h4,h5 {
+    font-family: "Raleway", sans-serif,
+    background-color : black;
+  
+  
   #more {display: none;}
+  
 
