--- a/templates/eeestatic.html
+++ b/templates/eeestatic.html
@@ -26,6 +26,8 @@ body {
   width: fit-content;
   height: fit-content;
   position: relative;
+  margin-right:auto;
+  margin-left:auto;
 }
 .input-search{
   height: 20px;
