--- a/templates/template.html
+++ b/templates/template.html
@@ -4,11 +4,10 @@
 <div class="container">
     <div class="card">
       <div class="card-header">
-        <img src="http://files.sathyabamauniversity.ac.in/IEEEWebsite/images/IEEE.jpg" alt="rover" />
+        <img src="https://images.unsplash.com/photo-1474377207190-a7d8b3334068?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="rover" />
       </div>
       <div class="card-body">
-        <span class="tag tag-teal">IEEE</span>
-        <h4>
+        <span class="tag tag-teal"><a href="https://docs.google.com/document/d/1l8VxbyiHGyY1U7A802cDg82JBwYHNI7L/edit?usp=sharing&ouid=107796660613622530171&rtpof=true&sd=true" STYLE="text-decoration:none;" target="_blank">IEEE</a></span>       <h4>
           IEEE Format
         </h4>
        
@@ -17,47 +16,39 @@
     </div>
     <div class="card">
       <div class="card-header">
-        <img src="https://www.newsbtc.com/wp-content/uploads/2020/06/mesut-kaya-LcCdl__-kO0-unsplash-scaled.jpg" alt="ballons" />
+        <img src="https://images.unsplash.com/photo-1532153955177-f59af40d6472?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cmVzZWFyY2glMjBwYXBlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="ballons" />
       </div>
       <div class="card-body">
-        <span class="tag tag-purple">Springer</span>
+        <span class="tag tag-purple"><a href="https://docs.google.com/document/d/1Vl4ZPHvrJXMy9L2IqQgFWs0w32pSnuua/edit?usp=sharing&ouid=107796660613622530171&rtpof=true&sd=true" STYLE="text-decoration:none;" target="_blank">Springer</a></span>
         <h4>
-          How to Keep Going When You Don’t Know What’s Next
+          Springer Template
         </h4>
-        <p>
-          The future can be scary, but there are ways to
-          deal with that fear.
-        </p>
 
       </div>
     </div>
     <div class="card">
       <div class="card-header">
-        <img src="https://images6.alphacoders.com/312/thumb-1920-312773.jpg" alt="city" />
+        <img src="https://images.unsplash.com/photo-1543286386-713bdd548da4?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8cmVzZWFyY2glMjBwYXBlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="city" />
       </div>
       <div class="card-body">
-        <span class="tag tag-pink">Design</span>
+        <span class="tag tag-teal"><a href="https://docs.google.com/document/d/1_Upd8VM5p_b9dnhn-IzHpTRTZnKaX2NJ/edit?usp=sharing&ouid=107796660613622530171&rtpof=true&sd=true" STYLE="text-decoration:none;" target="_blank">ACM</a></span>
         <h4>
-          10 Rules of Dashboard Design
+          ACM Template
         </h4>
-        <p>
-          Dashboard Design Guidelines
-        </p>
+
 
       </div>
     </div>
     <div class="card">
         <div class="card-header">
-          <img src="https://images6.alphacoders.com/312/thumb-1920-312773.jpg" alt="city" />
+          <img src="https://images.unsplash.com/photo-1457369804613-52c61a468e7d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8cmVzZWFyY2glMjBwYXBlcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="city" />
         </div>
         <div class="card-body">
-          <span class="tag tag-pink">Design</span>
+          <span class="tag tag-purple"><a STYLE="text-decoration:none;" href="https://docs.google.com/document/d/1l8VxbyiHGyY1U7A802cDg82JBwYHNI7L/edit?usp=sharing&ouid=107796660613622530171&rtpof=true&sd=true" target="_blank">APA</a></span>
           <h4>
-            10 Rules of Dashboard Design
+           APA Template
           </h4>
-          <p>
-            Dashboard Design Guidelines
-          </p>
+
 
         </div>
       </div>
@@ -65,34 +56,54 @@
 
       <div class="card">
         <div class="card-header">
-          <img src="https://images6.alphacoders.com/312/thumb-1920-312773.jpg" alt="city" />
+          <img src="https://images.unsplash.com/photo-1512758017271-d7b84c2113f1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" STYLE="text-decoration:none;" alt="city" />
         </div>
         <div class="card-body">
-          <span class="tag tag-pink">Design</span>
+          <span class="tag tag-teal"><a href="https://docs.google.com/document/d/1agpGadDsd4f-IBBumr9lG-7aYrrw86Z6/edit?usp=sharing&ouid=107796660613622530171&rtpof=true&sd=true" STYLE="text-decoration:none;" target="_blank">MLA</a></span>
           <h4>
-            10 Rules of Dashboard Design
+            MLA Template
           </h4>
-          <p>
-            Dashboard Design Guidelines
-          </p>
+
 
         </div>
       </div>
 
       <div class="card">
         <div class="card-header">
-          <img src="https://images6.alphacoders.com/312/thumb-1920-312773.jpg" alt="city" />
+          <img src="https://images.unsplash.com/photo-1543286386-2e659306cd6c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="city" />
         </div>
         <div class="card-body">
-          <span class="tag tag-pink">Design</span>
+          <span class="tag tag-purple"><a href="https://drive.google.com/file/d/1_tPYFnPHyiHZnhseBYdOoN2VeAPGbOnE/view?usp=sharing" STYLE="text-decoration:none;" target="_blank">PLOS</a></span>
           <h4>
-            10 Rules of Dashboard Design
+           PLOS Template
           </h4>
-          <p>
-            Dashboard Design Guidelines
-          </p>
+
 
         </div>
       </div>
 
-      
+      <style>
+        a:link {
+          color: green;
+          background-color: transparent;
+          text-decoration: none;
+        }
+        
+        a:visited {
+          color: pink;
+          background-color: transparent;
+          text-decoration: none;
+        }
+        
+        a:hover {
+          color: red;
+          background-color: transparent;
+          text-decoration: underline;
+        }
+        
+        a:active {
+          color: yellow;
+          background-color: transparent;
+          text-decoration: underline;
+        }
+        </style>
