--- a/static/css/aboutus.css
+++ b/static/css/aboutus.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 * {
   font-family: 'Roboto', sans-serif;
@@ -266,7 +265,7 @@ nav.circle > ul > li > a:hover:after {
 
   .header > nav.circle > ul> li {
     display: block;
-    font-size 80%;
+    font-size:80%;
   }  
 
   .header > nav.circle {
@@ -284,4 +283,28 @@ nav.circle > ul > li > a:hover:after {
     height: 48px;
     padding: 16px;
   }
+}
+
+/* fallback */
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialicons/v97/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
 }
