--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -59,17 +59,17 @@ li{
 	display: inline-block;
 	height: 40px;
 	width: 40px;
-	background-color: rgba(255,255,255,0.2);
+	background-color: rgba(87, 87, 87, 0.2);
 	margin:0 10px 10px 0;
 	text-align: center;
 	line-height: 40px;
 	border-radius: 50%;
-	color: #ffffff;
+	color: #000000c0;
 	transition: all 0.5s ease;
 }
 .footer-col .social-links a:hover{
-	color: #24262b;
-	background-color: #ffffff;
+	color: #ffffff;
+	background-color: #ffffff63;
 }
 
 @media(max-width: 767px){
