--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,7 +1,7 @@
 
   body,h1,h2,h3,h4,h5 {
-    font-family: "Raleway", sans-serif,
-    background-color : black;
+    font-family: "Raleway", sans-serif;
+    background-color:"black";}
   
   
   #more {display: none;}
