--- a/templates/home.html
+++ b/templates/home.html
@@ -13,8 +13,10 @@
 <body class="w3-light-grey">
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a href="branches.html">Branches</a>
+        
         <a href="home.html">Home</a>
+        <a href="branches.html">Branches</a>
+        <a href="template.html">Templates</a>
         <a href="news.html">News</a>
       </div>
       
@@ -322,8 +324,8 @@ moreText.style.display = "inline";
       </li> 
       <li class="w3-padding-16">
         <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large"><a href="news.html" target="_blank">News</a></span><br>
-        <span>News Realted to Research World</span>
+        <span class="w3-large"><a href="template.html" target="_blank">Templates</a></span><br>
+        <span>Templates For Different Journals</span>
       </li> 
  
     </ul>
