Removed about us

--- a/templates/NITmech.html
+++ b/templates/NITmech.html
@@ -29,7 +29,7 @@
   <div id="main">
     <button class="openbtn" onclick="openNav()">☰</button>
   </div>
-        <h1 style="color: gold; font-size:xx-large;">Professor List (IITs)<br>Computer Science and engineering</h1>
+        <h1 style="color: gold; font-size:xx-large;">Professor List (NITs)<br>Mechanical Engineering</h1>
         <div class="wrap"></div>
         <div class="search-box">
           <button class="btn-search"><i class="fas fa-search"></i></button>
