--- a/templates/eeestatic.html
+++ b/templates/eeestatic.html
@@ -273,8 +273,8 @@ h2 a {
     </style>
 </head>
 <body>
-    <h1><span class="blue"></span> <span class="yellow">Professor List (Alphabetical)</pan></h1>
-        <h2> Fields related to Computer Science and engineering</h2>
+    <h1><span class="blue"></span> <span class="yellow">Professor List </pan></h1>
+        <h2> Fields related to Electrical Engineering</h2>
         <div class="wrap"></div>
         <div class="search-box">
           <button class="btn-search"><i class="fas fa-search"></i></button>
