--- a/templates/iitchemical.html
+++ b/templates/iitchemical.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>
-        Hello Mf
+        
     </title>
     <style>
         /*	
@@ -262,7 +262,7 @@ h2 a {
 </head>
 <body>
     <h1><span class="blue"></span> <span class="yellow">Professor List (Alphabetical)</pan></h1>
-        <h2> Fields related to Computer Science and engineering</h2>
+        <h2> Fields related to Chemical Engineering</h2>
         <div class="wrap"></div>
         <div class="search-box">
           <button class="btn-search"><i class="fas fa-search"></i></button>
@@ -293,7 +293,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>  
+                    <td>Chemical Eng.</td>  
                     
                     
                     <td>Micro- and nano-fabrication, Colloids and interfacial science, instabilities in polymeric thin-films, nanostructured soft materials, microfluidics, micro/nano lenses, optical properties of nano-patterned polymer films and nanostructures, environmental biotechnology, DNA nanotechnology.</td>
@@ -309,7 +309,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Heat Transfer In Narrow Tubes; Biodiesel; Carbon Materials/ Nanocomposites Materials For Enhanced Capacitance</td>
@@ -325,7 +325,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Process Modeling & Simulation, Process Dynamics & Control, Process Design & Optimization, Transfer Processes, Artificial Inteligence in Chemical Engineering</td>
@@ -341,7 +341,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>â€¢Fuel cell â€“DAFC, PEMFC, URFC & Microfluidic Fuel cell  â€¢Electrochemical Engineering        â€¢Energy Engineeringâ€¢ Petroleum Refinery Engg, Biodiesel & Pyrolysis</td>
@@ -357,7 +357,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Chemical Reaction Engineering, Torrefaction, Pyrolysis, Gasification, Kinetic Modeling</td>
@@ -373,7 +373,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Interfacial Science and Technology, Mass transport in Biological Systems, Thin-films, Biophotonics, Photocatalysis, Photovolatics,Non-Linear Optical Nanomaterials, Optical Nanomaterial Synthesis and Applications, Nucleic Acid based Technologies</td>
@@ -389,7 +389,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Modelling and Simulation, Thermodynamics and Kinetics</td>
@@ -405,7 +405,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Industrial Pollution Abatment, Catalytic Themal Treatment, Coagulation-Flocculation, Adsoption</td>
@@ -421,7 +421,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Bio-energy,  Bio-compatible polymers and nano-fibers, Bio-remediation/degradation, Photo-degradation and Membrane Separation</td>
@@ -437,7 +437,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Bioremediation of Liquid, Solid and Gaseous Waste, Biofuel, Monitoring and Physicochemical Characterization of Black Carbon in Indo Gangatic Plane, Green Technology, Process Control, Physicochemical Characterization of Ayurvedic Formulations</td>
@@ -453,7 +453,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Solar Energy, Fabrication of Solar Cells, Wastewater Treatment, Colloids and Surface Science, Interfacial Adhesion</td>
@@ -469,7 +469,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Adsorption, catalysis, membrane separations, Fruit and vegetable  processing, Process Development</td>
@@ -485,7 +485,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Environmental Catalysis, Reaction Kinetics, Diesel Exhaust Treatment</td>
@@ -501,7 +501,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Polymer Technology, Transfer Processes, Chem. Reaction Engg, Chemical Technology, Polymer composites, Utilization of waste, Waste water treatment</td>
@@ -517,7 +517,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Heterogeneous Catalysis, Reaction Kinetics and Modeling, Computational Fluid Dynamics (CFD),  Chemical Vapor Deposition (CVD), Biomass Conversion Processes.</td>
@@ -533,7 +533,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Interfacial Science, Responsive surfaces, Hydro-gels, Structure and Dynamics of bio-molecules on soft interfaces, polymer films, Molecular Simulation Methodology</td>
@@ -549,7 +549,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Multiphase Flows, Measurement Techniques, Novel Reactors, Radioisotope based techniques, CFD, Membrane Reactors and Chemical Reactor Engineering</td>
@@ -565,7 +565,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Thin films, Adhesion-debonding of Soft Interfaces, Microfluidics, Complex fluids, Electrokinetics, Li-ion batteries, Supercapacitors, Electrolytes.</td>
@@ -581,7 +581,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Heterogeneous Catalysis, Chemical Reaction Engineering and Structured Reactors</td>
@@ -597,7 +597,7 @@ h2 a {
                     <td>IIT BHU</td>
                     
                     
-                    <td>CIVIL</td>
+                    <td>Chemical Eng.</td>
                     
                     
                     <td>Complex fluids, Interfacial phenomena at microscale, Thin Films, Cracks in colloidal films.</td>
