--- a/templates/mechanicalstatic.html
+++ b/templates/mechanicalstatic.html
@@ -274,7 +274,7 @@ h2 a {
 </head>
 <body>
     <h1><span class="blue"></span> <span class="yellow">Professor List (Alphabetical)</pan></h1>
-        <h2> Fields related to Computer Science and engineering</h2>
+        <h2> Mechanical Engineering</h2>
         <div class="wrap"></div>
         <div class="search-box">
           <button class="btn-search"><i class="fas fa-search"></i></button>
