--- a/templates/IITBIOTECH.HTML
+++ b/templates/IITBIOTECH.HTML
@@ -29,7 +29,7 @@
   <div id="main">
     <button class="openbtn" onclick="openNav()">☰</button>
   </div>
-        <h1 style="color: gold; font-size:xx-large;">Professor List (IITs)<br>Computer Science and engineering</h1>
+        <h1 style="color: gold; font-size:xx-large;">Professor List (IITs)<br>Biosciences and Bioengineering</h1>
         <div class="search-box">
           <div class="wrap"></div>
         <div class="search-box">
