--- a/templates/template.html
+++ b/templates/template.html
@@ -83,26 +83,27 @@
       </div>
 
       <style>
+        
         a:link {
-          color: green;
+          color: black;
           background-color: transparent;
           text-decoration: none;
         }
         
         a:visited {
-          color: pink;
+          color: black;
           background-color: transparent;
           text-decoration: none;
         }
         
         a:hover {
-          color: red;
+          color: black;
           background-color: transparent;
           text-decoration: underline;
         }
         
         a:active {
-          color: yellow;
+          color: black;
           background-color: transparent;
           text-decoration: underline;
         }
