--- a/templates/home.html
+++ b/templates/home.html
@@ -363,7 +363,7 @@ moreText.style.display = "inline";
          <div class="footer-col">
            <ul>
              <li><h4 style="font-weight: 600;">ManuScript © 2021</h4></li>
-             <li>A Platform for Academia.</a></li>
+             <li style="color: azure;">A Platform for Academia.</a></li>
            </ul>
          </div>
          <div class="footer-col">
