--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -59,7 +59,7 @@ body {
   padding: 16px;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
@@ -70,11 +70,10 @@ body {
 
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="branches.html">Branches</a>
   <a href="home.html">Home</a>
- <a href="research.html">Research</a>
-  <a href="aboutus.html">About Us</a>
+  <a href="branches.html">Branches</a>
   <a href="news.html">News</a>
+  <a href="template.html">Templates</a>
 </div>
 
 <div id="main">
