--- a/templates/home.html
+++ b/templates/home.html
@@ -321,7 +321,7 @@ moreText.style.display = "inline";
         <span>Best Site For Plag Checker</span>
       </li> 
       <li class="w3-padding-16">
-        <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+        <img src="https://images.unsplash.com/photo-1611079829529-fe31a9531295?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Image" class="w3-left w3-margin-right" style="width:50px">
         <span class="w3-large"><a href="template.html" target="_blank">Templates</a></span><br>
         <span>Templates For Different Journals</span>
       </li> 
