--- a/templates/IIITCSE.HTML
+++ b/templates/IIITCSE.HTML
@@ -20,12 +20,12 @@
 <body>
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="branches.html">Branches</a>
     <a href="home.html">Home</a>
-    <a href="research.html">Research</a>
-    <a href="aboutus.html">AboutUs</a>
+    <a href="branches.html">Branches</a>
     <a href="news.html">News</a>
+    <a href="template.html">Templates</a>
   </div>
+  
   <div id="main">
     <button class="openbtn" onclick="openNav()">☰</button>
   </div>
