--- a/templates/branches.html
+++ b/templates/branches.html
@@ -13,11 +13,10 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
     <a href="home.html">Home</a>
     <a href="branches.html">Branches</a>
-    <a href="research.html">Research</a>
-    <a href="aboutus.html">About Us</a>
     <a href="news.html">News</a>
+    <a href="template.html">Templates</a>
   </div>
-
+  
   <div id="main">
     <button class="openbtn" onclick="openNav()">☰ </button>
   </div>
