--- a/templates/eeestatic.html
+++ b/templates/eeestatic.html
@@ -273,6 +273,14 @@ h2 a {
     </style>
 </head>
 <body>
+  <div id="mySidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <a href="home.html">Home</a>
+    <a href="branches.html">Branches</a>
+    <a href="news.html">News</a>
+    <a href="template.html">Templates</a>
+  </div>
+  
     <h1><span class="blue"></span> <span class="yellow">Professor List </pan></h1>
         <h2> Fields related to Electrical Engineering</h2>
         <div class="wrap"></div>
