--- a/templates/home.html
+++ b/templates/home.html
@@ -11,12 +11,14 @@
 <link rel="stylesheet" href="/static/css/home.css">
 <link rel="stylesheet" href="/static/css/sidebar.css">
 <body class="w3-light-grey">
-    <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a href="branches.html">Branches</a>
-        <a href="home.html">Home</a>
-        <a href="news.html">News</a>
-      </div>
+  <div id="mySidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <a href="home.html">Home</a>
+    <a href="branches.html">Branches</a>
+    <a href="news.html">News</a>
+    <a href="template.html">Templates</a>
+  </div>
+  
       
       <div id="main">
         <button class="openbtn" onclick="openNav()">☰ </button>  
