--- a/templates/IIITECE.HTML
+++ b/templates/IIITECE.HTML
@@ -1571,7 +1571,7 @@
                       </script>
 			 <footer class="footer">
         <link rel="stylesheet" href="/static/css/footer.css">
-           <div class="container">
+           <div class="footer-container">
              <div class="row">
                <div class="footer-col">
                  <ul>
@@ -1606,6 +1606,6 @@
                </div>
              </div>
            </div>
-        </footer>  
+        </footer>
 </body>
 </html>
