--- a/templates/csestatic.html
+++ b/templates/csestatic.html
@@ -1426,7 +1426,7 @@
                       
 			   
 </body>
-<footer class="footer" style="margin: 0; padding: 0; box-sizing: border-box;">
+<footer class="footer">
   <link rel="stylesheet" href="/static/css/footer.css">
      <div class="footer-container">
        <div class="row">
