--- a/templates/home.html
+++ b/templates/home.html
@@ -340,7 +340,7 @@ moreText.style.display = "inline";
 <!-- Footer -->
 <footer class="footer">
   <link rel="stylesheet" href="/static/css/footer.css">
-     <div class="container">
+     <div class="footer-container">
        <div class="row">
          <div class="footer-col">
            <ul>
@@ -363,7 +363,7 @@ moreText.style.display = "inline";
          <div class="footer-col">
            <ul>
              <li><h4 style="font-weight: 600;">ManuScript © 2021</h4></li>
-             <li style="color: azure;">A Platform for Academia.</a></li>
+             <li>A Platform for Academia.</a></li>
            </ul>
          </div>
          <div class="footer-col">
