--- a/templates/nitcse.html
+++ b/templates/nitcse.html
@@ -6955,7 +6955,7 @@ Dr. B. Surendiran</td>
                       </script>
 		<footer class="footer">
       <link rel="stylesheet" href="/static/css/footer.css">
-         <div class="container">
+         <div class="footer-container">
            <div class="row">
              <div class="footer-col">
                <ul>
