--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-body{
+.footer body{
 	line-height: 1.5;
 	font-family: 'Poppins', sans-serif;
 }
-*{
+.footer *{
 	margin:0;
 	padding:0;
 	box-sizing: border-box;
 }
+
 .footer-container{
 	max-width: 1170px;
 	margin:auto;
