--- a/templates/NITCIVIL.html
+++ b/templates/NITCIVIL.html
@@ -7269,7 +7269,7 @@
                       </script>
 			<footer class="footer">
         <link rel="stylesheet" href="/static/css/footer.css">
-           <div class="container">
+           <div class="footer-container">
              <div class="row">
                <div class="footer-col">
                  <ul>
