--- a/templates/NITmech.html
+++ b/templates/NITmech.html
@@ -7715,7 +7715,7 @@ Dr. Anil Kumar Birru</td>
                       </script>
 			<footer class="footer">
         <link rel="stylesheet" href="/static/css/footer.css">
-           <div class="container">
+           <div class="footer-container">
              <div class="row">
                <div class="footer-col">
                  <ul>
