--- a/templates/eeestatic.html
+++ b/templates/eeestatic.html
@@ -9760,7 +9760,7 @@ quality monitoring, Acoustic and electromagnetic techniques for corrosion monito
                     </script>
 			   <footer class="footer">
           <link rel="stylesheet" href="/static/css/footer.css">
-             <div class="container">
+             <div class="footer-container">
                <div class="row">
                  <div class="footer-col">
                    <ul>
