--- a/templates/mechanicalstatic.html
+++ b/templates/mechanicalstatic.html
@@ -5401,7 +5401,7 @@ CFD/HT</td>
                     </script>
 			 <footer class="footer">
         <link rel="stylesheet" href="/static/css/footer.css">
-           <div class="container">
+           <div class="footer-container">
              <div class="row">
                <div class="footer-col">
                  <ul>
@@ -5436,6 +5436,6 @@ CFD/HT</td>
                </div>
              </div>
            </div>
-        </footer> 
+        </footer>
 </body>
 </html>
