--- a/templates/IIITCSE.HTML
+++ b/templates/IIITCSE.HTML
@@ -1854,7 +1854,7 @@
                <div class="footer-col">
                  <ul>
                    <li><h4 style="font-weight: 600;">ManuScript © 2021</h4></li>
-                   <li>A Platform for Academia.</a></li>
+                   <li style="color: azure;">A Platform for Academia.</li>
                  </ul>
                </div>
                <div class="footer-col">
