--- a/templates/NITmech.html
+++ b/templates/NITmech.html
@@ -7738,7 +7738,7 @@ Dr. Anil Kumar Birru</td>
                <div class="footer-col">
                  <ul>
                    <li><h4 style="font-weight: 600;">ManuScript © 2021</h4></li>
-                   <li>A Platform for Academia.</a></li>
+                   <li style="color: azure;">A Platform for Academia.</li>
                  </ul>
                </div>
                <div class="footer-col">
