--- a/templates/eeestatic.html
+++ b/templates/eeestatic.html
@@ -9791,7 +9791,7 @@ quality monitoring, Acoustic and electromagnetic techniques for corrosion monito
                  <div class="footer-col">
                    <ul>
                      <li><h4 style="font-weight: 600;">ManuScript © 2021</h4></li>
-                     <li>A Platform for Academia.</a></li>
+                     <li style="color: azure;">A Platform for Academia.</li>
                    </ul>
                  </div>
                  <div class="footer-col">
