--- a/templates/mechanicalstatic.html
+++ b/templates/mechanicalstatic.html
@@ -5432,7 +5432,7 @@ CFD/HT</td>
                <div class="footer-col">
                  <ul>
                    <li><h4 style="font-weight: 600;">ManuScript © 2021</h4></li>
-                   <li>A Platform for Academia.</a></li>
+                   <li style="color: azure;">A Platform for Academia.</li>
                  </ul>
                </div>
                <div class="footer-col">
