--- a/templates/template.html
+++ b/templates/template.html
@@ -2,6 +2,19 @@
 
 
 <link rel="stylesheet" href="/static/css/template.css">
+<div>
+  <div id="mySidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <a href="home.html">Home</a>
+    <a href="branches.html">Branches</a>
+    <a href="news.html">News</a>
+    <a href="template.html">Templates</a>
+  </div>
+  
+  <div id="main">
+    <button class="openbtn" style="top: 4px; left: 4px; position: absolute;" onclick="openNav()">☰ </button> 
+  </div>
+</div>
 <div class="container">
     <div class="card">
       <div class="card-header">
@@ -82,7 +95,7 @@
 
         </div>
       </div>
-
+      
       <style>
         
         a:link {
@@ -108,4 +121,117 @@
           background-color: transparent;
           text-decoration: underline;
         }
+        body {
+  font-family: "Lato", sans-serif;
+}
+
+.sidebar {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidebar a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidebar a:hover {
+  color: #f1f1f1;
+}
+
+.sidebar .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #111;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+}
+
+.openbtn:hover {
+  background-color: #444;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+
+@media screen and (max-height: 450px) {
+  .sidebar {padding-top: 15px;}
+  .sidebar a {font-size: 18px;}
+}
         </style>
+        <script>
+          function openNav() {
+            document.getElementById("mySidebar").style.width = "250px";
+            document.getElementById("main").style.marginLeft = "250px";
+          }
+          
+          function closeNav() {
+            document.getElementById("mySidebar").style.width = "0";
+            document.getElementById("main").style.marginLeft= "0";
+          }
+          </script>
+    <div>
+      <footer class="footer" style="width: 2000px;">
+        <link rel="stylesheet" href="/static/css/footer.css">
+           <div class="footer-container">
+             <div class="row">
+               <div class="footer-col">
+                 <ul>
+                   <li><h4>Sitemap</h4></li>
+                   <li><a href="home.html">Home</a></li>
+                   <li><a href="branches.html">Branches</a></li>
+                   <li><a href="news.html">News</a></li>
+                 </ul>
+               </div>
+               <div class="footer-col">
+                 <ul>
+                   <li><h4>Contact Devs</h4></li>
+                   <li><a href="mailto:piyush.chandra2013@gmail.com">Piyush Chandra</a></li>
+                   <li><a href="mailto:adityaarchie1234@gmail.com">Aditya Saxena</a></li>
+                   <li><a href="mailto:nandini0842@gmail.com">Nandini Singh</a></li>
+                   <li><a href="mailto:devanshchauhan19990@gmail.com">Devansh Chauhan</a></li>
+                <li><a href="mailto:ishankkaku@gmail.com">ishank Giri</a></li>
+                 </ul>
+               </div>
+               <div class="footer-col">
+                 <ul>
+                   <li><h4 style="font-weight: 600;">ManuScript © 2021</h4></li>
+                   <li style="color: azure;">A Platform for Academia.</li>
+                   <li style="color: azure;">Desktop view only</li>
+                 </ul>
+               </div>
+               <div class="footer-col">
+                 <h4>Team Socials</h4>
+                 <div class="social-links">
+                   <a href="https://github.com/adityasaxena-crypto/Flakp-web" target="_blank"><i style="fill: white;"><svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg></i></a>
+                   <a href="mailto:devatmanuscript@gmail.com"><i style="fill: white;"><svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Gmail</title><path d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z"/></svg></i></a>
+                 </div>
+               </div>
+             </div>
+           </div>
+        </footer>
+    </div>
