--- a/templates/iitchemical.html
+++ b/templates/iitchemical.html
@@ -4,12 +4,10 @@
     <title>
         
     </title>
+    <link rel="stylesheet" href="/static/css/professorlist.css">
     <style>
-        /*	
-	Side Navigation Menu V2, RWD
-	===================
-	Author: https://github.com/pablorgarcia
- */
+      
+
 
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
