--- a/templates/NITECE.html
+++ b/templates/NITECE.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <title>
-      CSE | Manuscript
+      NIT | ECE
     </title>
  <link rel="stylesheet" href="/static/css/professorlist.css">
+ <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
  <script>
   function openNav() {
     document.getElementById("mySidebar").style.width = "250px";
