--- a/templates/branches.html
+++ b/templates/branches.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/static/css/branches.css">
   <link rel="stylesheet" href="/static/css/sidebar.css">
 </head>
-
+<title>Branches</title>
 <body>
 
   <div id="mySidebar" class="sidebar">
