--- a/templates/civilstatic.html
+++ b/templates/civilstatic.html
@@ -5,6 +5,7 @@
         Civil | Manuscript
     </title>
     <link rel="stylesheet" href="/static/css/professorlist.css">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
   <div id="mySidebar" class="sidebar">
