--- a/templates/iitchemical.html
+++ b/templates/iitchemical.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <title>
-        
+      Chemical | Manuscript
     </title>
     <link rel="stylesheet" href="/static/css/professorlist.css">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <style>
       
 
