--- a/templates/Errorpage.html
+++ b/templates/Errorpage.html
@@ -2,6 +2,7 @@
 <html>
     <head>
           <link rel="stylesheet" href="/static/css/errorpage.css">
+          <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <title>Error</title>
     </head>
     <body>
