--- a/templates/csestatic.html
+++ b/templates/csestatic.html
@@ -5,6 +5,7 @@
       CSE | Manuscript
     </title>
  <link rel="stylesheet" href="/static/css/professorlist.css">
+ <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
  <script>
   function openNav() {
     document.getElementById("mySidebar").style.width = "250px";
