--- a/templates/mechanicalstatic.html
+++ b/templates/mechanicalstatic.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <title>
-        Hello Mf
+      Mechanical | Manuscript
     </title>
     <link rel="stylesheet" href="/static/css/professorlist.css">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script>
      function openNav() {
        document.getElementById("mySidebar").style.width = "250px";
