--- a/templates/template.html
+++ b/templates/template.html
@@ -1,7 +1,10 @@
-
-
+<html>
+<head>
 
 <link rel="stylesheet" href="/static/css/template.css">
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+</head>
+<title>Templates</title>
 <div>
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
@@ -235,3 +238,4 @@
            </div>
         </footer>
     </div>
+</html>
