--- a/templates/branches.html
+++ b/templates/branches.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/css/branches.css">
   <link rel="stylesheet" href="/static/css/sidebar.css">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <title>Branches</title>
 <body>
